@@ -10,12 +10,13 @@
 # Usage message.
 arUsage() {
 	tee >&2 << EOF
-usage: autorevision {-t output-type | -s symbol} [-o cache-file [-f] ] [-V]
+usage: autorevision {-t output-type | -s symbol} [-o cache-file [-f] ] [-e name] [-U] [-V]
 	Options include:
 	-t output-type		= specify output type
 	-s symbol		= specify symbol output
 	-o cache-file		= specify cache file location
 	-f			= force the use of cache data
+	-e name			= set a different output name for VCS_EXTRA
 	-U			= check for untracked files in svn
 	-V			= emit version and exit
 	-?			= help message
@@ -65,7 +66,7 @@ EOF
 
 # Config
 ARVERSION="&&ARVERSION&&"
-while getopts ":t:o:s:VfU" OPTION; do
+while getopts ":t:o:s:e:VfU" OPTION; do
 	case "${OPTION}" in
 		t)
 			AFILETYPE="${OPTARG}"
@@ -78,6 +79,9 @@ while getopts ":t:o:s:VfU" OPTION; do
 		;;
 		s)
 			VAROUT="${OPTARG}"
+		;;
+		e)
+			EXTRA_NAME="${OPTARG}"
 		;;
 		U)
 			UNTRACKEDFILES="1"
@@ -116,6 +120,7 @@ if [ ! -z "${CACHEFILE}" ] && ! echo "${CACHEFILE}" | grep -q '^\.*/'; then
 fi
 
 GENERATED_HEADER="Generated by autorevision - do not hand-hack!"
+: "${EXTRA_NAME:="VCS_EXTRA"}"
 
 # Functions to extract data from different repo types.
 # For git repos
@@ -407,7 +412,7 @@ VCS_DATE="${VCS_DATE}"
 VCS_BRANCH="${VCS_BRANCH}"
 VCS_TAG="${VCS_TAG}"
 VCS_TICK="${VCS_TICK}"
-VCS_EXTRA="${VCS_EXTRA}"
+${EXTRA_NAME}="${VCS_EXTRA}"
 
 VCS_ACTION_STAMP="${VCS_ACTION_STAMP}"
 VCS_FULL_HASH="${VCS_FULL_HASH}"
@@ -432,7 +437,7 @@ const char *VCS_DATE         = "${VCS_DATE}";
 const char *VCS_BRANCH       = "${VCS_BRANCH}";
 const char *VCS_TAG          = "${VCS_TAG}";
 const int VCS_TICK           = ${VCS_TICK};
-const char *VCS_EXTRA        = "${VCS_EXTRA}";
+const char *${EXTRA_NAME}        = "${VCS_EXTRA}";
 
 const char *VCS_ACTION_STAMP = "${VCS_ACTION_STAMP}";
 const char *VCS_FULL_HASH    = "${VCS_FULL_HASH}";
@@ -459,7 +464,7 @@ hOutput() {
 #define VCS_BRANCH		"${VCS_BRANCH}"
 #define VCS_TAG			"${VCS_TAG}"
 #define VCS_TICK		${VCS_TICK}
-#define VCS_EXTRA		"${VCS_EXTRA}"
+#define ${EXTRA_NAME}		"${VCS_EXTRA}"
 
 #define VCS_ACTION_STAMP	"${VCS_ACTION_STAMP}"
 #define VCS_FULL_HASH		"${VCS_FULL_HASH}"
@@ -488,7 +493,7 @@ xcodeOutput() {
 #define VCS_BRANCH		${VCS_BRANCH}
 #define VCS_TAG			${VCS_TAG}
 #define VCS_TICK		${VCS_TICK}
-#define VCS_EXTRA		${VCS_EXTRA}
+#define ${EXTRA_NAME}		${VCS_EXTRA}
 
 #define VCS_ACTION_STAMP	${VCS_ACTION_STAMP}
 #define VCS_FULL_HASH		${VCS_FULL_HASH}
@@ -542,7 +547,7 @@ let VCS_DATE			= "${VCS_DATE}"
 let VCS_BRANCH:	String	= "${VCS_BRANCH}"
 let VCS_TAG:	String?	= ${VCS_TAG}
 let VCS_TICK:	Int?	= ${VCS_TICK}
-let VCS_EXTRA:	String?	= ${VCS_EXTRA}
+let ${EXTRA_NAME}:	String?	= ${VCS_EXTRA}
 
 let VCS_ACTION_STAMP:	String?	= ${VCS_ACTION_STAMP}
 let VCS_FULL_HASH:		String	= "${VCS_FULL_HASH}"
@@ -571,7 +576,7 @@ VCS_DATE = "${VCS_DATE}"
 VCS_BRANCH = "${VCS_BRANCH}"
 VCS_TAG = "${VCS_TAG}"
 VCS_TICK = ${VCS_TICK}
-VCS_EXTRA = "${VCS_EXTRA}"
+${EXTRA_NAME} = "${VCS_EXTRA}"
 
 VCS_ACTION_STAMP = "${VCS_ACTION_STAMP}"
 VCS_FULL_HASH = "${VCS_FULL_HASH}"
@@ -596,7 +601,7 @@ plOutput() {
 \$VCS_BRANCH = '${VCS_BRANCH}';
 \$VCS_TAG = '${VCS_TAG}';
 \$VCS_TICK = ${VCS_TICK};
-\$VCS_EXTRA = '${VCS_EXTRA}';
+\$${EXTRA_NAME} = '${VCS_EXTRA}';
 
 \$VCS_ACTION_STAMP = '${VCS_ACTION_STAMP}';
 \$VCS_FULL_HASH = '${VCS_FULL_HASH}';
@@ -626,7 +631,7 @@ VCS_DATE = "${VCS_DATE}"
 VCS_BRANCH = "${VCS_BRANCH}"
 VCS_TAG = "${VCS_TAG}"
 VCS_TICK = ${VCS_TICK}
-VCS_EXTRA = "${VCS_EXTRA}"
+${EXTRA_NAME} = "${VCS_EXTRA}"
 
 VCS_ACTION_STAMP = "${VCS_ACTION_STAMP}"
 VCS_FULL_HASH = "${VCS_FULL_HASH}"
@@ -657,7 +662,7 @@ return array(
 	"VCS_BRANCH" => "${VCS_BRANCH}",
 	"VCS_TAG" => "${VCS_TAG}",
 	"VCS_TICK" => ${VCS_TICK},
-	"VCS_EXTRA" => "${VCS_EXTRA}",
+	"${EXTRA_NAME}" => "${VCS_EXTRA}",
 	"VCS_ACTION_STAMP" => "${VCS_ACTION_STAMP}",
 	"VCS_FULL_HASH" => "${VCS_FULL_HASH}",
 	"VCS_SHORT_HASH" => "${VCS_SHORT_HASH}",
@@ -686,7 +691,7 @@ VCS_DATE = "${VCS_DATE}"
 VCS_BRANCH = "${VCS_BRANCH}"
 VCS_TAG = "${VCS_TAG}"
 VCS_TICK = ${VCS_TICK}
-VCS_EXTRA = "${VCS_EXTRA}"
+${EXTRA_NAME} = "${VCS_EXTRA}"
 VCS_ACTION_STAMP = "${VCS_ACTION_STAMP}"
 VCS_FULL_HASH = "${VCS_FULL_HASH}"
 VCS_SHORT_HASH = "${VCS_SHORT_HASH}"
@@ -713,7 +718,7 @@ var autorevision = {
 	VCS_BRANCH: "${VCS_BRANCH}",
 	VCS_TAG: "${VCS_TAG}",
 	VCS_TICK: ${VCS_TICK},
-	VCS_EXTRA: "${VCS_EXTRA}",
+	${EXTRA_NAME}: "${VCS_EXTRA}",
 
 	VCS_ACTION_STAMP: "${VCS_ACTION_STAMP}",
 	VCS_FULL_HASH: "${VCS_FULL_HASH}",
@@ -748,7 +753,7 @@ jsonOutput() {
 	"VCS_BRANCH":"${VCS_BRANCH}",
 	"VCS_TAG": "${VCS_TAG}",
 	"VCS_TICK": ${VCS_TICK},
-	"VCS_EXTRA": "${VCS_EXTRA}",
+	"${EXTRA_NAME}": "${VCS_EXTRA}",
 
 	"VCS_ACTION_STAMP": "${VCS_ACTION_STAMP}",
 	"VCS_FULL_HASH": "${VCS_FULL_HASH}",
@@ -777,7 +782,7 @@ public class autorevision {
     public static final String VCS_BRANCH = "${VCS_BRANCH}";
     public static final String VCS_TAG = "${VCS_TAG}";
     public static final long VCS_TICK = ${VCS_TICK};
-    public static final String VCS_EXTRA = "${VCS_EXTRA}";
+    public static final String ${EXTRA_NAME} = "${VCS_EXTRA}";
 
     public static final String VCS_ACTION_STAMP = "${VCS_ACTION_STAMP}";
     public static final String VCS_FULL_HASH = "${VCS_FULL_HASH}";
@@ -805,7 +810,7 @@ VCS_DATE=${VCS_DATE}
 VCS_BRANCH=${VCS_BRANCH}
 VCS_TAG=${VCS_TAG}
 VCS_TICK=${VCS_TICK}
-VCS_EXTRA=${VCS_EXTRA}
+${EXTRA_NAME}=${VCS_EXTRA}
 
 VCS_ACTION_STAMP=${VCS_ACTION_STAMP}
 VCS_FULL_HASH=${VCS_FULL_HASH}
@@ -827,7 +832,7 @@ define(\`VCS_DATE', \`${VCS_DATE}')dnl
 define(\`VCS_BRANCH', \`${VCS_BRANCH}')dnl
 define(\`VCS_TAG', \`${VCS_TAG}')dnl
 define(\`VCS_TICK', \`${VCS_TICK}')dnl
-define(\`VCS_EXTRA', \`${VCS_EXTRA}')dnl
+define(\`${EXTRA_NAME}', \`${VCS_EXTRA}')dnl
 define(\`VCS_ACTIONSTAMP', \`${VCS_ACTION_STAMP}')dnl
 define(\`VCS_FULLHASH', \`${VCS_FULL_HASH}')dnl
 define(\`VCS_SHORTHASH', \`${VCS_SHORT_HASH}')dnl
@@ -851,7 +856,7 @@ texOutput() {
 \def \vcsBranch {${VCS_BRANCH}}
 \def \vcsTag {${VCS_TAG}}
 \def \vcsTick {${VCS_TICK}}
-\def \vcsExtra {${VCS_EXTRA}}
+\def \${EXTRA_NAME} {${VCS_EXTRA}}
 \def \vcsACTIONSTAMP {${VCS_ACTION_STAMP}}
 \def \vcsFullHash {${VCS_FULL_HASH}}
 \def \vcsShortHash {${VCS_SHORT_HASH}}
@@ -876,7 +881,7 @@ schemeOutput() {
 (define VCS_BRANCH      "${VCS_BRANCH}")
 (define VCS_TAG         "${VCS_TAG}")
 (define VCS_TICK        ${VCS_TICK})
-(define VCS_EXTRA       "${VCS_EXTRA}")
+(define ${EXTRA_NAME}       "${VCS_EXTRA}")
 
 (define VCS_ACTION_STAMP   "${VCS_ACTION_STAMP}")
 (define VCS_FULL_HASH   "${VCS_FULL_HASH}")
@@ -903,7 +908,7 @@ clojureOutput() {
 (def VCS_BRANCH      "${VCS_BRANCH}")
 (def VCS_TAG         "${VCS_TAG}")
 (def VCS_TICK        ${VCS_TICK})
-(def VCS_EXTRA       "${VCS_EXTRA}")
+(def ${EXTRA_NAME}       "${VCS_EXTRA}")
 
 (def VCS_ACTION_STAMP   "${VCS_ACTION_STAMP}")
 (def VCS_FULL_HASH      "${VCS_FULL_HASH}")
@@ -926,7 +931,7 @@ $([ "${VCS_DATE}" ] && echo "%define vcs_date		${VCS_DATE}")
 $([ "${VCS_BRANCH}" ] && echo "%define vcs_branch		${VCS_BRANCH}")
 $([ "${VCS_TAG}" ] && echo "%define vcs_tag			${VCS_TAG}")
 $([ "${VCS_TICK}" ] && echo "%define vcs_tick		${VCS_TICK}")
-$([ "${VCS_EXTRA}" ] && echo "%define vcs_extra		${VCS_EXTRA}")
+$([ "${VCS_EXTRA}" ] && echo "%define ${EXTRA_NAME}		${VCS_EXTRA}")
 
 $([ "${VCS_ACTION_STAMP}" ] && echo "%define vcs_action_stamp		${VCS_ACTION_STAMP}")
 $([ "${VCS_FULL_HASH}" ] && echo "%define vcs_full_hash		${VCS_FULL_HASH}")
@@ -958,7 +963,7 @@ namespace $(echo "${NAMESPACE}" | tr '[:upper:]' '[:lower:]')
 	const std::string VCS_BRANCH	= "${VCS_BRANCH}";
 	const std::string VCS_TAG		= "${VCS_TAG}";
 	const int VCS_TICK				= ${VCS_TICK};
-	const std::string VCS_EXTRA		= "${VCS_EXTRA}";
+	const std::string ${EXTRA_NAME}		= "${VCS_EXTRA}";
 
 	const std::string VCS_ACTION_STAMP	= "${VCS_ACTION_STAMP}";
 	const std::string VCS_FULL_HASH		= "${VCS_FULL_HASH}";
@@ -989,7 +994,7 @@ VCS_DATE = '${VCS_DATE}';
 VCS_BRANCH = '${VCS_BRANCH}';
 VCS_TAG = '${VCS_TAG}';
 VCS_TICK = ${VCS_TICK};
-VCS_EXTRA = '${VCS_EXTRA}';
+${EXTRA_NAME} = '${VCS_EXTRA}';
 
 VCS_ACTION_STAMP = '${VCS_ACTION_STAMP}';
 VCS_FULL_HASH = '${VCS_FULL_HASH}';
@@ -1013,7 +1018,7 @@ VCS_DATE = '${VCS_DATE}';
 VCS_BRANCH = '${VCS_BRANCH}';
 VCS_TAG = '${VCS_TAG}';
 VCS_TICK = ${VCS_TICK};
-VCS_EXTRA = '${VCS_EXTRA}';
+${EXTRA_NAME} = '${VCS_EXTRA}';
 
 VCS_ACTION_STAMP = '${VCS_ACTION_STAMP}';
 VCS_FULL_HASH = '${VCS_FULL_HASH}';
@@ -1226,6 +1231,7 @@ fi
 
 # If requested, make a cache file.
 if [ ! -z "${CACHEFILE}" ] && [ ! "${CACHEFORCE}" = "1" ]; then
+	EXTRA_NAME="VCS_EXTRA"
 	shOutput > "${CACHEFILE}.tmp"
 
 	# Check to see if there have been any actual changes.
