@@ -2,6 +2,7 @@
 
 Repository head:
 	Try to eliminate stray error output.
+	Allow the VCS_EXTRA symbol to be renamed.
 
 1.15 @ 2016-08-08:
   Add support for action stamps.
